--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,16 @@
         src: ssh_config.j2
         dest: ~/.ssh/config
         mode: preserve
+#      run_once: True
+#      connection: local
+
+    - name: copy private user_key_file
+      become: no
+      copy:
+        dest: ~/.ssh/id_rsa
+        src: ~/.ssh/id_rsa
+        mode: 600
+      when: ansible_distribution != 'MacOSX'
   when: ansible_play_hosts|sort == groups.all|sort
   tags:
     - always
