--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,7 +25,7 @@
       copy:
         dest: ~/.ssh/id_rsa
         src: ~/.ssh/id_rsa
-        mode: 600
+        mode: go-rw
       changed_when: False
       when: ansible_distribution != 'MacOSX'
   when: ansible_play_hosts|sort == groups.all|sort
